# zenith-cli

./: CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  SECURITY.md  install.ps1  install.sh
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  npm-publish.yml  release.yml
npm/: README.md  package-lock.json  package.json
npm/src/: index.ts  install.ts
src/: app.rs  main.rs
src/db/: mod.rs  models.rs
src/ui/: analytics.rs  dashboard.rs  focus.rs  form.rs  help.rs  inspector.rs  kanban.rs  mod.rs  quit.rs  splash.rs  theme.rs
