[package]
name = "zenith-cli"
version = "1.1.0"
edition = "2021"
authors = ["MiyaniAkshar1234"]
description = "A high-performance, cyberpunk-styled CLI Task Manager & RPG."
repository = "https://github.com/miyaniakshar1234/zenith-cli"
license = "MIT"
keywords = ["cli", "task-manager", "productivity", "tui", "rpg"]
categories = ["command-line-utilities", "visualization"]

[dependencies]
# The UI Layer (Modern & Cool)
ratatui = "0.29.0"
crossterm = "0.28.1"
tui-big-text = "0.4.3"
tui-textarea = "0.7.0"

# The Logic Layer (Solid & Strong)
rusqlite = { version = "0.32.1", features = ["bundled"] }
chrono = { version = "0.4.38", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }
uuid = { version = "1.10.0", features = ["v4"] }
anyhow = "1.0"
notify-rust = "4.11.0"

# The Professional Polish
color-eyre = "0.6.3"
directories = "5.0.1"
